[gd_scene load_steps=4 format=3 uid="uid://djctbjuqnpt82"]

[ext_resource type="Texture2D" uid="uid://bh2sn2c7seb7s" path="res://Assets/Tilesets/spikes.png" id="1_40rve"]
[ext_resource type="Script" uid="uid://cbghamy54h87t" path="res://Objects/spikes/spikes.gd" id="2_5osdg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5osdg"]
size = Vector2(32, 32)

[node name="Spikes" type="TextureRect"]
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("1_40rve")
stretch_mode = 1
script = ExtResource("2_5osdg")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_5osdg")

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
